# grok-eval

./: .gitignore  LICENSE.md  README.md  pyproject.toml
data/: .gitkeep
grok_eval/: __init__.py  __main__.py  agents.py  api.py  collector.py  core.py  plots.py  prompts.py  report.py  stats.py
grok_eval/commands/: __init__.py  full.py  ghost.py  run.py  showdown.py  sweep.py
tests/: test_eval.py
