[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "grok-eval"
version = "0.3.0"
description = "Rigorous evaluation suite for Grok 4.20 through Umbra behavioral gating"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Alex Kwon", email = "alex@collapseindex.org"}]
dependencies = [
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
grok-eval = "grok_eval.__main__:main"
